--- a/Business.html
+++ b/Business.html
@@ -69,10 +69,10 @@
     <section class="pricing" id="pricing">
       <!-- FEATURED – ANNUAL -->
       <div class="plan" data-plan="featured-annual">
-        <span class="tag">Best Value</span>
         <h3>Featured Venue: Annually</h3>
         <div class="price"><span class="amt">$4,999</span> <span class="period">/year</span></div>
         <ul class="feat">
+          <li>14 day free trial</li>
           <li>Secure your business's spot for a year</li>
           <li>Save 2 months or $998 vs. paying monthly</li>
           <li>Priority to renew your slot next year</li>
