--- a/Business.html
+++ b/Business.html
@@ -69,7 +69,7 @@
     <section class="pricing" id="pricing">
       <!-- FEATURED – ANNUAL -->
       <div class="plan" data-plan="featured-annual">
-        <h3>Featured Venue: Annually</h3>
+        <h3>Best Value: Annual plan</h3>
         <div class="price"><span class="amt">$4,999</span> <span class="period">/year</span></div>
         <ul class="feat">
           <li>14 day free trial</li>
@@ -85,7 +85,7 @@
 
       <!-- FEATURED – MONTHLY -->
       <div class="plan popular" data-plan="featured-monthly">
-        <h3>Featured Venue: Monthly</h3>
+        <h3>Most Flexible: Monthly plan</h3>
         <div class="price"><span class="amt">$499</span> <span class="period">/month</span></div>
         <ul class="feat">
           <li>Become a featured Le Libido pop-up dating event venue</li>
